# cdk-python

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-python.yml  test-publish.yml
scripts/: find-python.sh  generate-linux-aarch64-native.sh  generate-linux-aarch64.sh  generate-linux-x86_64.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows-x86_64.sh
src/cdk/: __init__.py
